# Push-Swap

./: CMakeLists.txt  Makefile  a.out  anas  args.c  checker  checker.c  checker.h  checker_utils.c  cost_sort.c  cost_sort_utils.c  ft_atoi.c  ft_putstr_fd.c  ft_split.c  ft_strcmp.c  ft_strdup.c  ft_strlcpy.c  ft_strlen.c  get_next_line.c  get_next_line_utils.c  is_numeric.c  lib.h  my_checker  push_swap  push_swap.c  push_swap.h  push_swap_utils.c  quick_sort.c  small_sort.c  stack.c  stack.h  stack_operations_a.c  stack_operations_b.c  stack_str.c
get_next_line/: get_next_line.c  get_next_line_utils.c
get_next_line_/: get_next_line.c
include/: checker.h  get_next_line.h  lib.h  push_swap.h  stack.h  string_stack.h
lib/: ft_atoi.c  ft_putstr.c  ft_putstr_fd.c  ft_split.c  ft_strcmp.c  ft_strdup.c  ft_strlcpy.c  ft_strlen.c  get_next_line.c  get_next_line_utils.c  is_numeric.c
sorting_algorithms/: cost_sort.c  cost_sort_utils.c  quick_sort.c  small_sort.c
sortings/: quick_sort.txt  radix_sort.txt  selection_sort.txt  sort_100.txt
src/: args.c  checker.c  checker_utils.c  push_swap.c  push_swap_utils.c  quick_sort.c  quick_sort_utils.c  radix_sort.c  radix_sort_utils.c  stack.c  stack_operations_a.c  stack_operations_b.c  stack_str.c  string_stack.c
tester1/: push_swap
tester2/: traces.txt
testers/: checker  push_swap
testers/push_swap_tester/: push_swap
testers/push_tester/: push_swap
testers/tester2/: push_swap  traces.txt
